--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="it">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Contatori Giocatori</title>
   <link rel="stylesheet" href="style.css">
 	<style>
@@ -23,6 +23,19 @@
     </div>
 
     <button id="reset">🔁</button>
+		<button id="endGame">⏹</button>
+		
+		<div id="menuToggle">
+      <input type="checkbox" />
+      <span></span>
+      <span></span>
+      <span></span>
+
+      <div id="menu" style="display:none;">
+        <h2>Cronologia Partite</h2>
+        <div id="historyContainer"></div>
+     </div>
+   </div>
 
     <div class="player">
       <input type="text" id="name2" value="Giocatore 2">
