--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </style>
 </head>
 <body>
-  <h1>Contatori Giocatori</h1>
+  <h1>Score points</h1>
 
   <div class="container">
     <div class="player">
