--- a/index.html
+++ b/index.html
@@ -26,17 +26,17 @@
 		<button id="endGame">⏹</button>
 		
 		<div id="menuToggle">
-      <input type="checkbox" />
-      <span></span>
-      <span></span>
-      <span></span>
+  <input type="checkbox" />
+  <span></span>
+  <span></span>
+  <span></span>
 
-      <div id="menu" style="display:none;">
-        <h2>Cronologia Partite</h2>
-        <div id="historyContainer"></div>
-     </div>
-   </div>
-
+  <div id="menu">
+    <h2>Cronologia Partite</h2>
+    <div id="historyContainer"></div>
+  </div>
+</div>
+    
     <div class="player">
       <input type="text" id="name2" value="Giocatore 2">
       <div class="score" id="score2">0</div>
