--- a/index.html
+++ b/index.html
@@ -45,6 +45,13 @@
       <button class="plus" data-player="2">+1 Punto</button>
     </div>
   </div>
+  
+  <div class="player">
+      <input type="text" id="name3" value="Giocatore 3">
+      <div class="score" id="score3">0</div>
+      <button class="plus" data-player="3">+1 Punto</button>
+    </div>
+  </div>
 
   <script src="script.js"></script>
 </body>
