--- a/index.html
+++ b/index.html
@@ -22,9 +22,6 @@
       <button class="plus" data-player="1">+1 Punto</button>
     </div>
 
-    <button id="reset">🔁</button>
-		<button id="endGame">⏹</button>
-		
 		<div id="menuToggle">
   <input type="checkbox" id="menuCheckbox" />
   <label for="menuCheckbox">
@@ -51,6 +48,11 @@
       <div class="score" id="score3">0</div>
       <button class="plus" data-player="3">+1 Punto</button>
     </div>
+  </div>
+  
+  <div class="buttons-bottom">
+    <button id="reset">🔁</button>
+    <button id="endGame">⏹</button>
   </div>
 
   <script src="script.js"></script>
