--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Contatori Giocatori</title>
+  <title>Score points</title>
   <link rel="stylesheet" href="style.css">
 	<style>
   body {
@@ -13,7 +13,7 @@
 </style>
 </head>
 <body>
-  <h1>Contatori Giocatori</h1>
+  <h1>Score points</h1>
   
   <div class="container">
     <div class="player">
